--- a/src/index.css
+++ b/src/index.css
@@ -1416,12 +1416,13 @@
 
 
   .profit_info ul {
-    font-size: 20px;
+    font-size: 15px;
     
     }
     .profit_info h1 {
-      font-size: 30px;
+      font-size: 20px;
       text-align: center;
+      width: 200px;
     }
 }
 
