--- a/src/index.css
+++ b/src/index.css
@@ -320,12 +320,12 @@ body {
   align-items: center;
   width: 100%;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 20px auto 0 auto;
   background: white;
   border-radius: 50px;
   padding: 10px 10px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-  margin-top: 20px;
+  gap: 10px; /* yangi: input va button orasiga mos ravishda joy */
 }
 
 .search_input {
@@ -336,6 +336,7 @@ body {
   padding: 15px 20px;
   border-radius: 50px;
   color: #555;
+  background: transparent;
 }
 
 .search_input::placeholder {
@@ -352,7 +353,6 @@ body {
   align-items: center;
   font-size: 18px;
   cursor: pointer;
-  margin-left: 10px;
   width: 50px;
   height: 50px;
 }
@@ -1494,12 +1494,11 @@ body {
     align-items: center;
   }
   .Why_logo img {
-    width: 160px;
-    height: 70px;
-    text-align: center;
-    margin: 10px 50px;
-    display: flex;
-    justify-content: center;
+    display: none;
+
+  }
+  .why{
+    padding-top: 80px;
   }
   .box {
     width: 300px;
